# kassandra

./: .dockerignore  .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  USER_GUIDE.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: docker-image.yml  release.yml
client/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/api/: client.ts  connection.ts  cql.ts  data.ts  metadata.ts  schema.ts
client/src/components/CqlEditor/: CqlEditor.tsx  CqlResults.tsx
client/src/state/: connection.ts  selection.ts
client/src/utils/: format.ts
docs/: REWRITE_CONTRACT.md  _config.yml  demo.md  index.md
issues/: Use-JSON-Editor-streamlit-extras.md  specialized-inputs.md
legacy/: Dockerfile  pyproject.toml
legacy/src/: main.py
legacy/src/config/: settings.py
legacy/src/database/: connection.py
legacy/src/utils/: type_mapping.py  utils.py
legacy/src/view/: cql_editor.py  data_grid.py  dialogs_view.py  main_view.py  table_info.py
server/: package.json  tsconfig.json
server/src/: app.ts  index.ts
server/src/cassandra/: connection.ts  repository.ts  schema.ts  state.ts
server/src/config/: store.ts
server/src/middleware/: error.ts
server/src/routes/: connection.ts  cql.ts  data.ts  metadata.ts  schema.ts
shared/: package.json
shared/src/: index.ts
shared/src/types/: api.ts  connection.ts  cql-types.ts  query.ts  schema.ts
src/: app.py
src/config/: settings.py
src/database/: connection.py  model.py  record.py  repository.py  schema.py
src/ui/: connection_dialog.py  dynamic_form.py
src/view/: connection_form.py  cql_view.py  data_grid.py  dialogs_view.py  form.py  main_view.py  table_info.py
(+26 files in other folders)
