[project]
name = "py-sandra"
version = "0.2.0b3"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "streamlit>=1.30.0",
    "cassandra-driver>=3.28.0",
    "pandas>=2.0.0",
    "pandas-stubs~=2.3.3",
    "streamlit-extras>=1.4.1",
    "streamlit-code-editor>=0.1.22",
    "setuptools<83",
    "streamlit-monaco>=0.1.3",
    # 'pillow' is used by streamlit. Version 12.1.0 has security issues.
    "pillow>=12.1.1",
    # 'cryptography' 44.0.1 is used by streamlit. There is a security risk addressed in 46.0.5.
    # Once https://github.com/snowflakedb/snowflake-connector-python/issues/2776 is merged, this can be removed
    "cryptography>=46.0.7",
]
