[project]
name = "py-sandra"
version = "0.2.0b3"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "streamlit>=1.30.0",
    "cassandra-driver>=3.30.0",
    "pandas>=2.0.0",
    "pandas-stubs~=2.3.3",
    "streamlit-extras>=1.4.1",
    "streamlit-code-editor>=0.1.22",
    "setuptools<83",
    "streamlit-monaco>=0.1.3",
    # 'pillow' is used by streamlit. Version 12.1.0 has security issues.
    "pillow>=12.1.1",
]
