[project]
name = "py-sandra"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "streamlit>=1.57.0",
    "cassandra-driver>=3.30.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "streamlit-extras>=1.6.0",
    "streamlit-code-editor>=0.1.22",
    "setuptools<83",
    "streamlit-monaco>=0.1.3",
    # 'pillow' is used by streamlit. Version 12.1.0 has security issues.
    "pillow>=12.1.1",
]
